Fix work visibility

--- a/assets/styles/modules/_work.scss
+++ b/assets/styles/modules/_work.scss
@@ -12,9 +12,10 @@
   top: 0;
   left: 0;
   width: 100%;
+  visibility: hidden;
   opacity: 0;
   z-index: -1;
-  transition-property: opacity;
+  transition-property: opacity, visibility;
   transition-duration: 500ms;
   transition-timing-function: linear;
 }
@@ -24,9 +25,10 @@
 //-----------------------------------------
 .m-work__group[data-active] {
   position: static;
+  visibility: visible;
   opacity: 1;
   z-index: 0;
-  transition-property: opacity;
+  transition-property: opacity, visibility;
   transition-duration: 500ms;
   transition-timing-function: linear;
   transition-delay: 500ms;
